# dify-anthropic-search-plugin

./: manifest.yaml  pyproject.toml  requirements.txt
models/llm/: _position.yaml  claude-opus-4-6.yaml  claude-opus-4-7.yaml  llm.py
